# platform-espressif32

./: .travis.yml  README.md  adafruit_funhouse_esp32s2.json  appveyor.yml  platform.json  platform.py
examples/espidf-coap-server/components/: CMakeLists.txt  Kconfig  idf_component.yml
examples/espidf-coap-server/components/libcoap/: .gitignore  CMakeLists.txt  ChangeLog  LICENSE  Makefile.am  Makefile.libcoap  README.md  autogen.sh  cmake_coap_config.h.in  coap_config.h.contiki  coap_config.h.lwip  coap_config.h.lwip.in  coap_config.h.riot  coap_config.h.riot.in  coap_config.h.windows  configure.ac  libcoap-3.map  libcoap-3.sym
examples/espidf-coap-server/components/libcoap/.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
examples/espidf-coap-server/components/libcoap/.github/workflows/: main.yml
examples/espidf-coap-server/components/libcoap/doc/: Doxyfile.in  Makefile.am  docbook.local.css  main.md  module_api_wrap.h  upgrade_4.3.0_4.3.1.txt
examples/espidf-coap-server/components/libcoap/examples/: Makefile.am  coap-client.c  coap-rd.c  coap-server.c  etsi_iot_01.c
examples/espidf-coap-server/components/libcoap/examples/lwip/: server-coap.c
examples/espidf-coap-server/components/libcoap/ext/tinydtls/: AutoConf.cmake  CMakeLists.txt  CONTRIBUTING.md  README.md  alert.h  autogen.sh  configure.ac  crypto.c  crypto.h  dtls.c  dtls.h  dtls_config.h.cmake.in  dtls_debug.c  dtls_debug.h  dtls_mutex.h  dtls_prng.c  dtls_time.c  dtls_time.h  hmac.c  hmac.h  netq.c  netq.h  peer.h  session.c  session.h  state.h  tinydtls.pc.in
examples/espidf-coap-server/components/libcoap/include/coap3/: block.h  coap.h.in  coap.h.windows  coap.h.windows.in  coap_address.h  coap_asn1_internal.h  coap_async.h  coap_async_internal.h  coap_block_internal.h  coap_cache.h  coap_cache_internal.h  coap_debug.h  coap_dtls.h  coap_dtls_internal.h  coap_event.h  coap_forward_decls.h  coap_hashkey.h  coap_internal.h  coap_io.h  coap_io_internal.h  coap_mutex.h  coap_net_internal.h  coap_option.h  coap_pdu_internal.h  coap_prng.h  coap_resource_internal.h  coap_riot.h  coap_session.h  coap_session_internal.h  coap_subscribe.h  coap_subscribe_internal.h  coap_tcp_internal.h  coap_time.h  encode.h  libcoap.h  lwippools.h  mem.h  net.h  pdu.h  resource.h  (+2 more)
examples/espidf-coap-server/components/libcoap/m4/: ac_check_cryptolibs.m4
examples/espidf-coap-server/components/libcoap/man/: Makefile.am  coap-client.txt.in  coap-rd.txt.in  coap-server.txt.in  coap.txt.in  coap_async.txt.in  coap_attribute.txt.in  coap_block.txt.in  coap_cache.txt.in  coap_encryption.txt.in  coap_endpoint_client.txt.in  coap_endpoint_server.txt.in  coap_handler.txt.in  coap_io.txt.in  coap_logging.txt.in  coap_observe.txt.in  coap_pdu_access.txt.in  coap_pdu_setup.txt.in  coap_recovery.txt.in  coap_resource.txt.in  coap_tls_library.txt.in  examples-code-check.c
examples/espidf-coap-server/components/libcoap/scripts/: api-version-bump.sh  github_dist.sh  msbuild.sln.cmd
examples/espidf-coap-server/components/libcoap/src/: block.c  coap_address.c  coap_asn1.c  coap_async.c  coap_cache.c  coap_debug.c  coap_event.c  coap_gnutls.c  coap_hashkey.c  coap_io.c  coap_io_lwip.c  coap_io_riot.c  coap_mbedtls.c  coap_notls.c  coap_openssl.c  coap_option.c  coap_prng.c  coap_session.c  coap_subscribe.c  coap_tcp.c  coap_time.c  coap_tinydtls.c  encode.c  mem.c  net.c  pdu.c  resource.c  str.c  uri.c
examples/espidf-coap-server/components/libcoap/tests/: Makefile.am  test_error_response.c  test_sendqueue.c  test_session.c  test_wellknown.c  testdriver.c
examples/espidf-coap-server/components/libcoap/tests/oss-fuzz/: pdu_parse_target.c
examples/espidf-coap-server/components/libcoap/win32/: libcoap.vcxproj  libcoap.vcxproj.filters
examples/espidf-coap-server/components/port/include/: coap_config.h  coap_config_posix.h
examples/espidf-coap-server/components/port/include/coap3/: coap.h
examples/espidf-peripherals-usb/components/esp_tinyusb/: CHANGELOG.md  CMakeLists.txt  Kconfig  README.md  cdc.c  descriptors_control.c  idf_component.yml  storage_sdmmc.c  storage_spiflash.c  tinyusb.c  tinyusb_cdc_acm.c  tinyusb_console.c  tinyusb_msc.c  tinyusb_net.c  tinyusb_task.c  tusb_cdc_acm.c  tusb_console.c  tusb_msc_storage.c  tusb_tasks.c  usb_descriptors.c  vfs_tinyusb.c
examples/espidf-peripherals-usb/components/esp_tinyusb/additions/src/: usb_descriptors.c
examples/espidf-peripherals-usb/components/esp_tinyusb/include/: tinyusb.h  tinyusb_cdc_acm.h  tinyusb_console.h  tinyusb_default_config.h  tinyusb_msc.h  tinyusb_net.h  tusb_cdc_acm.h  tusb_config.h  tusb_console.h  tusb_msc_storage.h  tusb_tasks.h  vfs_tinyusb.h
examples/espidf-peripherals-usb/components/esp_tinyusb/include/deprecated/: tusb_cdc_acm.h  tusb_console.h  tusb_msc_storage.h
examples/espidf-peripherals-usb/components/esp_tinyusb/include_private/: cdc.h  descriptors_control.h  msc_storage.h  storage_sdmmc.h  storage_spiflash.h  tinyusb_task.h
examples/espidf-peripherals-usb/components/esp_tinyusb/test/local/: CMakeLists.txt  libusb_test.c
examples/espidf-peripherals-usb/components/esp_tinyusb/test_app/: CMakeLists.txt  README.md  pytest_usb_device_cdc.py  pytest_usb_device_esp_tinyusb.py  sdkconfig.defaults
examples/espidf-peripherals-usb/components/esp_tinyusb/test_app/main/: CMakeLists.txt  idf_component.yml  test_bvalid_sig.c  test_bvalid_sig.h  test_descriptors_config.c  test_descriptors_config.h  test_esp_tinyusb.c  test_tud_cb.c
examples/espidf-peripherals-usb/components/esp_tinyusb/test_apps/: README.md
examples/espidf-peripherals-usb/components/esp_tinyusb/test_apps/cdc/: CMakeLists.txt  pytest_cdc.py  pytest_cdc_throughput.py  sdkconfig.defaults
examples/espidf-peripherals-usb/components/esp_tinyusb/test_apps/dconn_detection/: CMakeLists.txt  pytest_dconn_detection.py  sdkconfig.defaults
examples/espidf-peripherals-usb/components/esp_tinyusb/test_apps/msc_storage/: CMakeLists.txt  pytest_msc_storage.py  sdkconfig.defaults
examples/espidf-peripherals-usb/components/esp_tinyusb/test_apps/ncm/: CMakeLists.txt  (+1 more)
(+735 files in other folders)
